# vulkan-compute-image-processing

./: .gitignore  CMakeLists.txt
shaders/: DarkChannelPrior.comp  DarkChannelPrior.comp.spv  GuidedFilter.comp  ImageDarkChannelPrior.comp  ImageRadiance.comp  ImageTransmission.comp  MaximumAirLight.comp  MedianFilter.comp  Square.comp  Square.comp.spv  edgedetect.comp  edgedetect.comp.spv  emboss.comp  emboss.comp.spv  sharpen.comp  sharpen.comp.spv  texture.frag  texture.vert.spv
src/: GlobalConfiguration.h  VulkanEngine.cpp  VulkanEngine.h  VulkanEngineEntryPoint.cpp  VulkanEngineEntryPoint.h  main.cpp
src/algorithms/: DatasetFileReader.h  GeometryAssertion.h  GlareAndOcclusionDetection.h  GlareDetection.h  ImuExtract.h  VanishingPointEstimation.h  VisibilityCalculation.h
src/profiling/: Timer.h
src/rendering/: Camera.cpp  Camera.h  VulkanEngineBuffer.cpp  VulkanEngineBuffer.h  VulkanEngineDescriptors.cpp  VulkanEngineDescriptors.h  VulkanEngineDevice.cpp  VulkanEngineDevice.h  VulkanEngineRenderer.cpp  VulkanEngineRenderer.h  VulkanEngineSwapChain.cpp  VulkanEngineSwapChain.h  VulkanEngineWindow.cpp  VulkanEngineWindow.h  VulkanTexture.cpp  VulkanTexture.h  VulkanTools.cpp  VulkanTools.h
src/rendering/gui/: DebugGui.cpp  DebugGui.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
src/threading/: BS_thread_pool.h
src/util/: Dataset.h  circularbuffer.h  polyfit.h
